# predictive_module

./: .gitignore  Cargo.toml  Dockerfile  build.rs
src/: db.rs  main.rs
src/cron_jobs/: mod.rs  training_job.rs
src/handlers/: recommendations.rs
src/models/: db.rs
src/services/: als.rs  cache.rs  cronjobs.rs  db.rs  firebird.rs  mod.rs  modelserver.rs  mssql.rs  training.rs
