[package]
name = "predictive_module"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# Dependencies
[dependencies]
async-trait = "0.1.83"
# For SQL Server database connections
tiberius = { version = "0.12.3", features = ["chrono", "tds73"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
dotenv = "0.15"
futures = "0.3"
# For connecting to Firebird database
rsfbclient = { version = "0.25.1", features = ["pure_rust"] }
rsfbclient-rust = "0.25.1"


# ALS logic
ndarray = "0.15.2"                                               # For numerical operations
ndarray-linalg = { version = "0.16.0", features = ["openblas"] }
ndarray-rand = "0.14.0"
rand = "0.8"                                                     # For random initialization in ALS training

# Async runtime and web framework
warp = "0.3" # For creating the web server

# Caching and synchronization
tokio-cron-scheduler = "0.13.0"
chrono-tz = "0.10.1"
tokio-sync = "0.1"              # For using Mutex and synchronization

# Serde for JSON serialization/deserialization and to watch for file changes
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "5.0"

# For logging (optional but useful)
env_logger = "0.10"
log = "0.4"

# For parallel processing
rayon = "1.10.0"

# For singletons
lazy_static = "1.5"
percent-encoding = "2.3.1"


# Development dependencies
[dev-dependencies]
tokio-test = "0.4" # For async testing utilities

[profile.release]
opt-level = 3

[features]
openblas = ["ndarray-linalg/openblas"]
